--- a/projects/03-mouse-follower/src/App.css
+++ b/projects/03-mouse-follower/src/App.css
@@ -39,3 +39,12 @@
 .read-the-docs {
   color: #888;
 }
+
+.no-cursor {
+  cursor: none;
+}
+
+.hidden-pointer {
+  background-color: transparent;
+  cursor: none;
+}
